[gd_scene load_steps=2 format=3 uid="uid://k01cuh4jdp7w"]

[ext_resource type="Script" path="res://GameObjectScripts/CasteDisplay.gd" id="1_augo1"]

[node name="CasteDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -876.0
offset_bottom = -512.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_augo1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 265.0
offset_bottom = 194.0
mouse_filter = 2

[node name="CasteTitle" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 30.0

[node name="CasteDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 255.0
offset_bottom = 77.0

[node name="EditButton" type="Button" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 92.0
offset_right = 255.0
offset_bottom = 116.0
text = "Edit"

[node name="Approval" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 99.0
offset_right = 52.0
offset_bottom = 122.0

[node name="Limitedness" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 147.0
offset_right = 57.0
offset_bottom = 170.0

[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
